新增客户端war包模块